Changed KeyedPartitionStream to NonKeyedPartitionStream.