@@ -2,7 +2,10 @@ package org.example;
 
 import org.apache.flink.api.common.RuntimeExecutionMode;
 import org.apache.flink.api.connector.dsv2.DataStreamV2SourceUtils;
-import org.apache.flink.api.connector.dsv2.Sink;
+import org.apache.flink.api.connector.dsv2.DataStreamV2SinkUtils;
+import org.apache.flink.api.connector.sink2.Sink;
+import org.apache.flink.api.connector.sink2.SinkWriter;
+import org.apache.flink.api.connector.sink2.WriterInitContext;
 import org.apache.flink.api.java.functions.KeySelector;
 import org.apache.flink.api.java.tuple.Tuple2;
 import org.apache.flink.connector.file.src.FileSource;
@@ -15,9 +18,23 @@ import org.apache.flink.datastream.api.context.PartitionedContext;
 import org.apache.flink.datastream.api.function.OneInputStreamProcessFunction;
 import org.apache.flink.datastream.api.stream.KeyedPartitionStream;
 import org.apache.flink.datastream.api.stream.NonKeyedPartitionStream;
-import org.apache.flink.streaming.api.functions.sink.PrintSink;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Set;
+
+/**
+ * 运行时需要添加以下 JVM 参数解决模块访问问题：
+ * --add-opens java.base/java.util=ALL-UNNAMED
+ * --add-opens java.base/java.lang=ALL-UNNAMED
+ * --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+ */
 public class Main {
+    private static final Logger log = LoggerFactory.getLogger(Main.class);
+
     public static void main(String[] args) throws Exception {
         System.out.println("This is flink2demo wordcount4batchv2...");
 
@@ -47,43 +64,57 @@ public class Main {
             }
         });
 
-        // 分组
+        // 统计
+        NonKeyedPartitionStream.ProcessConfigurableAndNonKeyedPartitionStream<Tuple2<String, Integer>> wordCount = wordPairs.process(new OneInputStreamProcessFunction<Tuple2<String, Integer>, Tuple2<String, Integer>>() {
 
-        KeyedPartitionStream<String, Tuple2<String, Integer>> wordGroups = wordPairs.keyBy(new KeySelector<Tuple2<String, Integer>, String>() {
+            private Map<String, Integer> wordCounts;
+            private Collector<Tuple2<String, Integer>> collector;
+
             @Override
-            public String getKey(Tuple2<String, Integer> value) throws Exception {
-                return value.f0;
+            public void open(NonPartitionedContext<Tuple2<String, Integer>> ctx) throws Exception {
+                OneInputStreamProcessFunction.super.open(ctx);
+                this.wordCounts = new HashMap<>();
+            }
+
+            @Override
+            public void processRecord(Tuple2<String, Integer> record, Collector<Tuple2<String, Integer>> output, PartitionedContext<Tuple2<String, Integer>> ctx) throws Exception {
+                String word = record.f0;
+                int count = wordCounts.getOrDefault(word, 0) + record.f1;
+                wordCounts.put(word, count);
+                this.collector = output;
+            }
+
+            @Override
+            public void endInput(NonPartitionedContext<Tuple2<String, Integer>> ctx) throws Exception {
+                // 输出所有单词的最终统计结果
+                if (this.collector != null) {
+                    for (Map.Entry<String, Integer> entry : wordCounts.entrySet()) {
+                        this.collector.collect(Tuple2.of(entry.getKey(), entry.getValue()));
+                    }
+                }
             }
         });
 
-        // 统计
-
-        KeyedPartitionStream.ProcessConfigurableAndKeyedPartitionStream<String, Tuple2<String, Integer>> wordCount = wordGroups.process(
-                new OneInputStreamProcessFunction<Tuple2<String, Integer>, Tuple2<String, Integer>>() {
-
-                    private int count;
-
-                    @Override
-                    public void open(NonPartitionedContext<Tuple2<String, Integer>> ctx) throws Exception {
-                        OneInputStreamProcessFunction.super.open(ctx);
-                        this.count = 0;
-                    }
-
-                    @Override
-                    public void processRecord(Tuple2<String, Integer> record, Collector<Tuple2<String, Integer>> output, PartitionedContext<Tuple2<String, Integer>> ctx) throws Exception {
-                        this.count += record.f1;
-                        output.collect(Tuple2.of(record.f0, this.count));
-                    }
-                },
-                new KeySelector<Tuple2<String, Integer>, String>() {
-                    @Override
-                    public String getKey(Tuple2<String, Integer> value) throws Exception {
-                        return value.f0;
-                    }
-                });
-
         // 打印结果
-        wordCount.toSink((Sink<Tuple2<String, Integer>>) new PrintSink<Tuple2<String, Integer>>());
+        wordCount.toSink(DataStreamV2SinkUtils.wrapSink(new Sink<Tuple2<String, Integer>>() {
+            @Override
+            public SinkWriter<Tuple2<String, Integer>> createWriter(WriterInitContext context) throws IOException {
+                return new SinkWriter<Tuple2<String, Integer>>() {
+                    @Override
+                    public void write(Tuple2<String, Integer> element, Context context) {
+                        System.out.println(element);
+                    }
+
+                    @Override
+                    public void flush(boolean endOfInput) {
+                    }
+
+                    @Override
+                    public void close() {
+                    }
+                };
+            }
+        }));
 
         // 执行
         env.execute("wordcount4batchv2");
